# RP2040-ESP32C3-Development-Board

./: .gitignore  .gitmodules  README.md
Altium/: ESP32-C3 Module.SchDoc  Information.SchDoc  Interface.SchDoc  Power.SchDoc  RP2040_ESP32-C3 Dev Board.PrjPcb
HW/: RP2040_ESP32-C3 Dev Board.DXF
HW/Altium/: ESP32-C3 Module.SchDoc  Information.SchDoc  Interface.SchDoc  Power.SchDoc  RP2040.SchDoc  RP2040_ESP32-C3 Dev Board.PrjPcb
HW/Case 3D Print/Case 3D/: Button.STL  Lower.STL  Spacer.STL  Upper.STL
RP2040-ESP32C3_Dev_Board/: CMakeLists.txt  RP2040-ESP32C3_Dev_Board.c
RP2040-ESP32C3_Dev_Board/SLG46826/: CMakeLists.txt  HAL_SLG46826.c  HAL_SLG46826.h  I2C_SLG46826.h  I2C_SLG46826_REG.h  SLG46826.c  SLG46826.h
SW/viking/: CMakeLists.txt
SW/viking/button/: CMakeLists.txt  main.c
SW/viking/io_expander/: CMakeLists.txt  RP2040-ESP32C3_Dev_Board.c
SW/viking/io_expander/SLG46826/: CMakeLists.txt  HAL_SLG46826.h
SW/viking/io_expander/core/: HAL_SLG46826.c  SLG46826.c  SLG46826.h
SW/viking/io_expander/examples/HelloWorld/: CMakeLists.txt  main.c
SW/viking/io_expander/examples/Programmer/: CMakeLists.txt  main.c
SW/viking/io_expander/examples/Programmer/SLG46826 Codes/: Square Wave Generator.gp6  Square Wave Generator_NVM.hex  Square Wave Generator_NVM2.hex
SW/viking/lcd/: CMakeLists.txt
SW/viking/lcd/core/: vikingLcdDriver.c  vikingLcdDriver.h
SW/viking/lcd/examples/AlpElectronixLogo/: AlpElectronixLogo.h  CMakeLists.txt  main.c
SW/viking/lcd/examples/vikingLVGL/: CMakeLists.txt  main.c
SW/viking/led/: CMakeLists.txt  main.c
SW/viking/led_blink/: CMakeLists.txt  main.c
SW/viking/sd_card/: CMakeLists.txt
SW/viking/sd_card/examples/SDWrite/: CMakeLists.txt  hw_config.c  main.c
SW/viking/sd_card/lib/no-OS-FatFS-SD-SPI-RPi-Pico/: README.md
SW/viking/sd_card/lib/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/: CMakeLists.txt
SW/viking/sd_card/lib/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/sd_driver/: sd_card.c  sd_spi.c  spi.h
SW/viking/sd_card/lib/no-OS-FatFS-SD-SPI-RPi-Pico/dynamic_config_example/: CMakeLists.txt  dynamic_config_example.cpp  hw_config.cpp  thing_plus.dynamic_config_example.cpp
SW/viking/sd_card/lib/no-OS-FatFS-SD-SPI-RPi-Pico/example/: CMakeLists.txt  FatFS_SPI_example.cpp  data_log_demo.c  hw_config.c  maker_pi_pico.hw_config.c  thing_plus.hw_config.c
SW/viking/sd_card/lib/no-OS-FatFS-SD-SPI-RPi-Pico/example/tests/: app4-IO_module_function_checker.c  simple.c
SW/viking/sd_card/lib/no-OS-FatFS-SD-SPI-RPi-Pico/simple_example/: CMakeLists.txt  hw_config.c  simple_example.cpp  thing_plus.hw_config.c
SW/viking/wifi/: CMakeLists.txt
SW/viking/wifi/examples/WiFiConnection/: CMakeLists.txt  main.c
SW/viking_PlatformIO/button/button/: platformio.ini
SW/viking_PlatformIO/button/button/src/: main.cpp
SW/viking_PlatformIO/lcd/AlpElectronixLogo/src/: AlpElectronixLogo.h  main.cpp  vikingLcdDriver.cpp
SW/viking_PlatformIO/lcd/vikingLVGL/: .gitignore  platformio.ini
SW/viking_PlatformIO/lcd/vikingLVGL/src/: main.cpp  vikingLcdDriver.h
SW/viking_PlatformIO/led/led/src/: main.cpp
