if (NOT PICO_NO_HARDWARE)
    add_subdirectory(led_blink)
    add_subdirectory(lcd)
    add_subdirectory("lcd/examples/AlpElectronixLogo")
    add_subdirectory("lcd/examples/vikingLVGL/lvgl")
    add_subdirectory("lcd/examples/vikingLVGL")
    add_subdirectory("io_expander/examples/Programmer")
    add_subdirectory(sd_card)
    add_subdirectory("sd_card/lib/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI" build)
    add_subdirectory("sd_card/examples/SDWrite")
endif ()

